--- a/project.gradle
+++ b/project.gradle
@@ -19,8 +19,8 @@ dependencies {
     compile(group: "joda-time", name: "joda-time", version: "2.2");
     compile(group: "com.googlecode.libphonenumber", name: "libphonenumber",
         version: "5.6");
-    // TODO: make it "provided" when gradle adds support for it
-    compile(group: "com.google.code.findbugs", name: "jsr305", version: "2.0.1");
+    provided(group: "com.google.code.findbugs", name: "jsr305",
+        version: "2.0.1");
     testCompile(group: "org.testng", name: "testng", version: "6.8.5") {
         exclude(group: "junit", module: "junit");
         exclude(group: "org.beanshell", module: "bsh");
