--- a/project.gradle
+++ b/project.gradle
@@ -14,7 +14,8 @@ project.ext {
  * List of dependencies
  */
 dependencies {
-    compile(group: "com.github.fge", name: "json-schema-core", version: "1.1.8");
+    compile(group: "com.github.fge", name: "json-schema-core",
+        version: "1.1.9-SNAPSHOT");
     compile(group: "javax.mail", name: "mailapi", version: "1.4.3");
     compile(group: "joda-time", name: "joda-time", version: "2.2");
     compile(group: "com.googlecode.libphonenumber", name: "libphonenumber",
