build.gradle: fix one printf() call
Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -159,7 +159,7 @@ task checkSigningRequirements << {
     requiredProperties.each {
         if (project.properties[it] == null) {
             noDice = true;
-            System.err.printf("property \"%s\" is not defined!")
+            System.err.printf("property \"%s\" is not defined!", it);
         }
     }
     if (noDice)
