--- a/project.gradle
+++ b/project.gradle
@@ -35,11 +35,10 @@ javadoc.options.links("http://docs.oracle.com/javase/6/docs/api");
 javadoc.options.links("http://jsr-305.googlecode.com/svn/trunk/javadoc");
 javadoc.options.links("http://fasterxml.github.com/jackson-databind/javadoc/2.2.0");
 javadoc.options.links("http://fasterxml.github.com/jackson-core/javadoc/2.2.0");
-javadoc.options.links("http://docs.guava-libraries.googlecode.com/git/javadoc");
+javadoc.options.links("http://docs.guava-libraries.googlecode.com/git-history/v16.0.1/javadoc");
 javadoc.options.links("http://fge.github.io/btf");
 javadoc.options.links("http://fge.github.io/msg-simple");
 javadoc.options.links("http://fge.github.io/jackson-coreutils");
 javadoc.options.links("http://fge.github.io/uri-template");
-javadoc.options.links("http://fge.github.io/json-schema-core/devel");
-javadoc.options.links("http://google-guice.googlecode.com/git/javadoc");
+javadoc.options.links("http://fge.github.io/json-schema-core/stable");
 
