--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,9 @@
                     <links>
                         <link>http://fasterxml.github.com/jackson-databind/javadoc/2.1.1/</link>
                         <link>http://fasterxml.github.com/jackson-core/javadoc/2.1.1/</link>
-                        <link>http://docs.oracle.com/javase/6/docs/api</link>
-                        <link>http://joda-time.sourceforge.net/api-release</link>
-                        <link>http://docs.guava-libraries.googlecode.com/git/javadoc</link>
+                        <link>http://docs.oracle.com/javase/6/docs/api/</link>
+                        <link>http://joda-time.sourceforge.net/api-release/</link>
+                        <link>http://docs.guava-libraries.googlecode.com/git/javadoc/</link>
                         <link>http://fge.github.com/json-schema-core/stable/</link>
                     </links>
                     <docfilessubdirs>true</docfilessubdirs>
