--- a/project.gradle
+++ b/project.gradle
@@ -2,7 +2,7 @@
  * Project-specific settings. Unfortunately we cannot put the name in there!
  */
 group = "com.github.fge";
-version = "2.1.9-SNAPSHOT";
+version = "2.1.9";
 sourceCompatibility = "1.6";
 targetCompatibility = "1.6"; // defaults to sourceCompatibility
 
@@ -15,7 +15,7 @@ project.ext {
  */
 dependencies {
     compile(group: "com.github.fge", name: "json-schema-core",
-        version: "1.1.9");
+        version: "1.1.10");
     compile(group: "javax.mail", name: "mailapi", version: "1.4.3");
     compile(group: "joda-time", name: "joda-time", version: "2.3");
     compile(group: "com.googlecode.libphonenumber", name: "libphonenumber",
