Upgrade to gradle 1.11
Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -133,7 +133,8 @@ artifacts {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = "1.10";
+    gradleVersion = "1.11";
+    distributionUrl = "http://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip";
 }
 
 task pom << {
