--- a/build.gradle
+++ b/build.gradle
@@ -33,21 +33,21 @@
  *
  * https://github.com/spring-projects/gradle-plugins/tree/master/propdeps-plugin
  */
-//buildscript {
-//    repositories {
-//        mavenCentral();
+buildscript {
+    repositories {
+        mavenCentral();
 //        maven {
 //            url "http://repo.springsource.org/plugins-release";
 //        }
-//    }
-//    dependencies {
-//        classpath(group: "eu.appsatori", name: "gradle-fatjar-plugin",
-//            version: "0.2-rc2");
+    }
+    dependencies {
+        classpath(group: "com.github.rholder", name: "gradle-one-jar",
+            version: "1.0.4");
 //        classpath(group: "org.springframework.build.gradle",
 //            name: "propdeps-plugin", version: "0.0.5");
-//    }
-//};
-//
+    }
+};
+
 //configure(allprojects) {
 //    apply(plugin: "propdeps");
 //    apply(plugin: "propdeps-maven");
@@ -59,9 +59,9 @@ apply(plugin: "java");
 apply(plugin: "maven");
 apply(plugin: "signing");
 apply(plugin: "osgi");
-//apply(plugin: "fatjar");
 apply(plugin: "idea");
 apply(plugin: "eclipse");
+apply(plugin: "gradle-one-jar");
 
 apply(from: "project.gradle");
 
@@ -121,15 +121,19 @@ task javadocJar(type: Jar, dependsOn: copyDocFiles) {
     from javadoc.destinationDir;
 }
 
-//fatJar {
-//    classifier = "full";
-//}
+task fullJar(type: OneJar) {
+    mainClass = "com.github.fge.jsonschema.main.Main";
+    mergeManifestFromJar = true;
+    archiveName = "jsonschema.jar";
+    manifest {
+        attributes 'One-Jar-Silent': true;
+    }
+}
 
 artifacts {
     archives jar;
     archives sourcesJar;
     archives javadocJar;
-// bad idea:    archives fatJar;
 }
 
 task wrapper(type: Wrapper) {
