--- a/project.gradle
+++ b/project.gradle
@@ -22,6 +22,7 @@ dependencies {
         version: "5.9");
     compile(group: "com.google.code.findbugs", name: "jsr305",
         version: "2.0.1");
+    compile(group: "net.sf.jopt-simple", name: "jopt-simple", version: "4.6");
     testCompile(group: "org.testng", name: "testng", version: "6.8.7") {
         exclude(group: "junit", module: "junit");
         exclude(group: "org.beanshell", module: "bsh");
