--- a/build.gradle
+++ b/build.gradle
@@ -122,7 +122,7 @@ task javadocJar(type: Jar, dependsOn: copyDocFiles) {
 }
 
 task fullJar(type: OneJar) {
-    mainClass = "com.github.fge.jsonschema.main.Main";
+    mainClass = "com.github.fge.jsonschema.main.cli.Main";
     archiveName = "jsonschema.jar";
 }
 
