Add the full jar to the archives

--- a/build.gradle
+++ b/build.gradle
@@ -130,6 +130,7 @@ artifacts {
     archives jar;
     archives sourcesJar;
     archives javadocJar;
+    archives fullJar;
 }
 
 task wrapper(type: Wrapper) {
