--- a/project.gradle
+++ b/project.gradle
@@ -15,7 +15,7 @@ project.ext {
  */
 dependencies {
     compile(group: "com.github.fge", name: "json-schema-core",
-        version: "1.1.11");
+        version: "1.2.0");
     compile(group: "javax.mail", name: "mailapi", version: "1.4.3");
     compile(group: "joda-time", name: "joda-time", version: "2.3");
     compile(group: "com.googlecode.libphonenumber", name: "libphonenumber",
@@ -41,5 +41,5 @@ javadoc.options.links("http://fge.github.io/btf/");
 javadoc.options.links("http://fge.github.io/msg-simple/");
 javadoc.options.links("http://fge.github.io/jackson-coreutils/");
 javadoc.options.links("http://fge.github.io/uri-template/");
-javadoc.options.links("http://fge.github.io/json-schema-core/devel/");
+javadoc.options.links("http://fge.github.io/json-schema-core/1.2.x/");
 
