Prepare for next version
In 2.2.1:

Francis Galiegue (5):
      Prepare next version
      Main: default to loading schemas using the current directory as a URI
      Main: improve help
      Improve help for main
      2.2.1

Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/project.gradle
+++ b/project.gradle
@@ -21,7 +21,7 @@
  * Project-specific settings. Unfortunately we cannot put the name in there!
  */
 group = "com.github.fge";
-version = "2.2.1";
+version = "2.2.2-SNAPSHOT";
 sourceCompatibility = "1.6";
 targetCompatibility = "1.6"; // defaults to sourceCompatibility
 
