Fix libJar task: add different classifier
"appendix" is not enough.

--- a/build.gradle
+++ b/build.gradle
@@ -133,9 +133,11 @@ task fullJar(type: OneJar) {
  * This jar already includes all the dependencies.
  */
 task libJar(type: Jar, dependsOn: jar) {
-    appendix = "lib"
-    from {configurations.compile.collect {zipTree(it)}}
-    with jar
+    classifier = "lib";
+    from {
+        configurations.compile.collect { zipTree(it) }
+    };
+    with jar;
 }
 
 artifacts {
