Modify tests; add a message for validation loops
Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
@@ -74,3 +74,8 @@ err.format.jsonpointer.invalid = input string "%s" is not a valid JSON Pointer
 err.format.macAddr.invalid = input string "%s" is not a valid MAC address
 err.format.uriTemplate.invalid = input string "%s" is not a valid URI template
 err.format.UUID.invalid = input string "%s" is not a valid UUID
+
+#
+# Other messages
+#
+err.common.validationLoop = validation loop detected
