--- a/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
@@ -78,5 +78,4 @@ err.format.UUID.invalid = input string "%s" is not a valid UUID
 #
 # Other messages
 #
-err.common.validationLoop = validation loop: same schema visited more than \
-  once for the same instance
+err.common.validationLoop = validation loop: schema "%s" visited twice for pointer "%s" into validated instance
