One more message change
Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
@@ -78,4 +78,5 @@ err.format.UUID.invalid = input string "%s" is not a valid UUID
 #
 # Other messages
 #
-err.common.validationLoop = validation loop: schema "%s" visited twice for pointer "%s" into validated instance
+err.common.validationLoop = validation loop: schema "%s" visited twice for \
+  pointer "%s" of validated instance
