--- a/project.gradle
+++ b/project.gradle
@@ -34,7 +34,7 @@ project.ext {
  */
 dependencies {
     compile(group: "com.github.fge", name: "json-schema-core",
-        version: "1.2.4-SNAPSHOT");
+        version: "1.2.4");
     compile(group: "javax.mail", name: "mailapi", version: "1.4.3");
     compile(group: "joda-time", name: "joda-time", version: "2.3");
     compile(group: "com.googlecode.libphonenumber", name: "libphonenumber",
