Fuse *.gradle files
Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,14 @@ apply(plugin: "idea");
 apply(plugin: "eclipse");
 apply(plugin: "gradle-one-jar");
 
-apply(from: "project.gradle");
+group = "com.github.fge";
+version = "2.2.5-SNAPSHOT";
+sourceCompatibility = "1.6";
+targetCompatibility = "1.6"; // defaults to sourceCompatibility
+
+project.ext {
+    description = "A Java implementation of the JSON Schema specification";
+};
 
 /*
  * Repositories to use
@@ -73,6 +80,40 @@ apply(from: "project.gradle");
 repositories {
     mavenCentral();
 }
+
+/*
+ * List of dependencies
+ */
+dependencies {
+    compile(group: "com.github.fge", name: "json-schema-core",
+        version: "1.2.4");
+    compile(group: "javax.mail", name: "mailapi", version: "1.4.3");
+    compile(group: "joda-time", name: "joda-time", version: "2.3");
+    compile(group: "com.googlecode.libphonenumber", name: "libphonenumber",
+        version: "6.0");
+    compile(group: "com.google.code.findbugs", name: "jsr305",
+        version: "2.0.1");
+    compile(group: "net.sf.jopt-simple", name: "jopt-simple", version: "4.6");
+    testCompile(group: "org.testng", name: "testng", version: "6.8.7") {
+        exclude(group: "junit", module: "junit");
+        exclude(group: "org.beanshell", module: "bsh");
+        exclude(group: "org.yaml", module: "snakeyaml");
+    };
+    testCompile(group: "org.mockito", name: "mockito-core", version: "1.9.5");
+    testCompile(group: "org.easytesting", name: "fest-assert", version: "1.4");
+}
+
+javadoc.options.links("http://docs.oracle.com/javase/6/docs/api/");
+javadoc.options.links("http://jsr-305.googlecode.com/svn/trunk/javadoc/");
+javadoc.options.links("http://fasterxml.github.com/jackson-databind/javadoc/2.2.0/");
+javadoc.options.links("http://fasterxml.github.com/jackson-core/javadoc/2.2.0/");
+javadoc.options.links("http://docs.guava-libraries.googlecode.com/git-history/v16.0.1/javadoc/");
+javadoc.options.links("http://fge.github.io/btf/");
+javadoc.options.links("http://fge.github.io/msg-simple/");
+javadoc.options.links("http://fge.github.io/jackson-coreutils/");
+javadoc.options.links("http://fge.github.io/uri-template/");
+javadoc.options.links("http://fge.github.io/json-schema-core/1.2.x/");
+
 
 /*
  * Necessary! Otherwise TestNG will not be used...
