Configurable cache size for processing validations
Also: Changing default cache size to 512

--- a/src/main/resources/com/github/fge/jsonschema/validator/configuration.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/configuration.properties
@@ -37,3 +37,4 @@ nullFormat = format attribute name cannot be null
 nullAttribute = attempt to register null implementation of format attribute "%s"
 nullKeyword = attempt to add null keyword to library
 nullType = null type argument to digester constructor
+invalidCacheSize = cache size must be greater than -1. -1 value sets a cache with unlimited records, zero-value disables the cache
