Extra format support for ISO currency codes

--- a/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
@@ -74,6 +74,7 @@ err.format.jsonpointer.invalid = input string "%s" is not a valid JSON Pointer
 err.format.macAddr.invalid = input string "%s" is not a valid MAC address
 err.format.uriTemplate.invalid = input string "%s" is not a valid URI template
 err.format.UUID.invalid = input string "%s" is not a valid UUID
+err.format.currency.invalid = input string "%s" is not a supported ISO 4217 currency code
 
 #
 # Other messages
