--- a/build.gradle
+++ b/build.gradle
@@ -63,15 +63,12 @@ repositories {
  * List of dependencies
  */
 dependencies {
-    compile(group: "com.github.fge", name: "json-schema-core",
-        version: "1.2.5");
+    compile(group: "com.github.fge", name: "json-schema-core", version: "1.2.5");
     compile(group: "javax.mail", name: "mailapi", version: "1.4.3");
-    compile(group: "joda-time", name: "joda-time", version: "2.3");
-    compile(group: "com.googlecode.libphonenumber", name: "libphonenumber",
-        version: "6.2");
-    compile(group: "com.google.code.findbugs", name: "jsr305",
-        version: "3.0.0");
-    compile(group: "net.sf.jopt-simple", name: "jopt-simple", version: "4.6");
+    compile(group: "joda-time", name: "joda-time", version: "2.9.7");
+    compile(group: "com.googlecode.libphonenumber", name: "libphonenumber", version: "8.0.0");
+    compile(group: "com.google.code.findbugs", name: "jsr305", version: "3.0.1");
+    compile(group: "net.sf.jopt-simple", name: "jopt-simple", version: "5.0.3");
     testCompile(group: "org.testng", name: "testng", version: "6.8.7") {
         exclude(group: "junit", module: "junit");
         exclude(group: "org.beanshell", module: "bsh");
