--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ repositories {
  */
 dependencies {
     compile(group: "com.github.java-json-tools", name: "json-schema-core", version: "1.2.8");
-    compile(group: "javax.mail", name: "mailapi", version: "1.4.3");
+    compile(group: "com.sun.mail", name: "mailapi", version: "1.6.1");
     compile(group: "joda-time", name: "joda-time", version: "2.9.7");
     compile(group: "com.googlecode.libphonenumber", name: "libphonenumber", version: "8.0.0");
     compile(group: "com.google.code.findbugs", name: "jsr305", version: "3.0.1");
