--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ apply(plugin: "net.ltgt.errorprone");
 
 group = "com.github.java-json-tools";
 version = "2.2.12-SNAPSHOT";
-sourceCompatibility = "1.6";
-targetCompatibility = "1.6"; // defaults to sourceCompatibility
+sourceCompatibility = JavaVersion.VERSION_1_7;
+targetCompatibility = JavaVersion.VERSION_1_7; // defaults to sourceCompatibility
 
 /*
  * Repositories to use
@@ -68,7 +68,7 @@ dependencies {
     testCompile(group: "org.easytesting", name: "fest-assert", version: "1.4");
 }
 
-javadoc.options.links("http://docs.oracle.com/javase/6/docs/api/");
+javadoc.options.links("http://docs.oracle.com/javase/7/docs/api/");
 javadoc.options.links("http://www.javadoc.io/doc/com.google.code.findbugs/jsr305/3.0.1/");
 javadoc.options.links("http://fasterxml.github.com/jackson-databind/javadoc/2.2.0/");
 javadoc.options.links("http://fasterxml.github.com/jackson-core/javadoc/2.2.0/");
